syntax = "proto3";
package polkabtc;

service StakedRelayer {
    rpc GetAddress (GetAddressRequest) returns (GetAddressResponse);
    // Latest Bitcoin block as reported by the BTC-Relay on the BTC Parachain.
    rpc GetBestBlock (GetBestBlockRequest) returns (GetBestBlockResponse);
    rpc GetStatus (GetStatusRequest) returns (GetStatusResponse);
    rpc GetStatusUpdate (GetStatusUpdateRequest) returns (GetStatusUpdateResponse);

    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Deregister (DeregisterRequest) returns (DeregisterResponse);
}

message GetAddressRequest {
}

message GetAddressResponse {
    string address = 1;
}

message GetBestBlockRequest {
}

message GetBestBlockResponse {
    // TODO: bitcoin-core height (if available)
    uint32 height = 1;
}

enum Status {
    Running = 0;
    Error = 1;
    Shutdown = 2;
}

message GetStatusRequest {
}

message GetStatusResponse {
    Status status = 1;
}

message GetStatusUpdateRequest {
    uint64 id = 1;
}

message GetStatusUpdateResponse {
    Status new_status_code = 1;
    Status old_status_code = 2;
    uint64 block_number = 3;
    string proposer = 4;
}

message RegisterRequest {
    uint64 stake = 1;
}

message RegisterResponse {
}

message DeregisterRequest {
}

message DeregisterResponse {
}